[gd_scene load_steps=14 format=2]

[ext_resource path="res://Stages/Depression/Sections/TriggerGoodChallenges/IntroJump.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Stages/Depression/Enemies/DeathPit/DeathPit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stages/Depression/TriggerSpawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://CameraAdjust.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 600, 20 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 120, 16 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 220, 20 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 500, 20 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 320, 20 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 160, 20 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 30, 80 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 40, 80 )

[node name="JumpIntro" type="Node2D"]

script = ExtResource( 1 )

[node name="Scenery" type="Node2D" parent="." index="0"]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="StaticBody2D" parent="Scenery" index="0"]

editor/display_folded = true
position = Vector2( 45.4404, 331.722 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Scenery/Floor" index="1"]

scale = Vector2( 18, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Floor2" type="StaticBody2D" parent="Scenery" index="1"]

editor/display_folded = true
position = Vector2( 1196.53, 503.768 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor2" index="0"]

shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Scenery/Floor2" index="1"]

scale = Vector2( 3.8, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Floor3" type="StaticBody2D" parent="Scenery" index="2"]

editor/display_folded = true
position = Vector2( 850, 590 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor3" index="0"]

shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Scenery/Floor3" index="1"]

scale = Vector2( 7, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Floor4" type="StaticBody2D" parent="Scenery" index="3"]

editor/display_folded = true
position = Vector2( 1880, 415 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor4" index="0"]

shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Scenery/Floor4" index="1"]

scale = Vector2( 15.5, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Floor5" type="StaticBody2D" parent="Scenery" index="4"]

editor/display_folded = true
position = Vector2( 4000, 620 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor5" index="0"]

shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Scenery/Floor5" index="1"]

scale = Vector2( 10, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Platform" type="StaticBody2D" parent="Scenery" index="5"]

editor/display_folded = true
position = Vector2( 2734, 415 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Platform" index="0"]

shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Scenery/Platform" index="1"]

scale = Vector2( 5, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Platform2" type="StaticBody2D" parent="Scenery" index="6"]

editor/display_folded = true
position = Vector2( 3290, 620 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Platform2" index="0"]

shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Scenery/Platform2" index="1"]

scale = Vector2( 5, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="Wall" type="StaticBody2D" parent="Scenery" index="7"]

editor/display_folded = true
position = Vector2( 1055.69, 564.787 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall" index="0"]

shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Scenery/Wall" index="1"]

scale = Vector2( 1, 2.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Wall2" type="StaticBody2D" parent="Scenery" index="8"]

editor/display_folded = true
position = Vector2( 610.368, 468.495 )
scale = Vector2( 1, 1.75401 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall2" index="0"]

shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Scenery/Wall2" index="1"]

scale = Vector2( 1, 2.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Wall3" type="StaticBody2D" parent="Scenery" index="9"]

editor/display_folded = true
position = Vector2( 1348.93, 473.809 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall3" index="0"]

shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Scenery/Wall3" index="1"]

scale = Vector2( 1, 2.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Wall4" type="StaticBody2D" parent="Scenery" index="10"]

editor/display_folded = true
position = Vector2( 4290.66, 474.788 )
scale = Vector2( 1, 1.75401 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall4" index="0"]

shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Scenery/Wall4" index="1"]

scale = Vector2( 1, 2.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Enemies" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="DeathPit" parent="Enemies" index="0" instance=ExtResource( 3 )]

position = Vector2( 2900, 780 )
_sections_unfolded = [ "Transform", "Z Index" ]
width = 2000

[node name="Spawns" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="Spawn" parent="Spawns" index="0" instance=ExtResource( 4 )]

position = Vector2( 956.347, 515.536 )

[node name="Spawn2" parent="Spawns" index="1" instance=ExtResource( 4 )]

position = Vector2( 1269.13, 437.256 )

[node name="Spawn3" parent="Spawns" index="2" instance=ExtResource( 4 )]

position = Vector2( 2342.81, 357.478 )

[node name="Spawn4" parent="Spawns" index="3" instance=ExtResource( 4 )]

position = Vector2( 3008.85, 523.059 )

[node name="Spawn5" parent="Spawns" index="4" instance=ExtResource( 4 )]

position = Vector2( 3414.86, 557.919 )

[node name="Spawn6" parent="Spawns" index="5" instance=ExtResource( 4 )]

position = Vector2( 4200, 550 )
_sections_unfolded = [ "Transform" ]
respawn_time = 1.8

[node name="Spawn7" parent="Spawns" index="6" instance=ExtResource( 4 )]

position = Vector2( 4200, 435 )
_sections_unfolded = [ "Transform" ]
respawn_time = 1.8

[node name="Spawn8" parent="Spawns" index="7" instance=ExtResource( 4 )]

position = Vector2( 4200, 330 )
_sections_unfolded = [ "Transform" ]
respawn_time = 1.8

[node name="ChallengeCamera" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 1900, 320 )
_sections_unfolded = [ "Transform" ]
top_limit = 180
top_time = 0.8
bottom_limit = 820

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChallengeCamera/Area2D" index="0"]

shape = SubResource( 8 )

[node name="EasyCamera" parent="." index="4" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 1700, 320 )
_sections_unfolded = [ "Transform" ]
top_limit = 0
top_time = 0.8
bottom_limit = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="EasyCamera/Area2D" index="0"]

shape = SubResource( 8 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="FirstDown" parent="." index="5" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 200, 230 )
_sections_unfolded = [ "Transform" ]
top_limit = 0
top_time = 0.6
bottom_limit = 500
bottom_time = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstDown/Area2D" index="0"]

shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="FirstDownReturn" parent="." index="6" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( -2.51733, 230 )
_sections_unfolded = [ "Transform" ]
top_limit = -500
top_time = 0.8
bottom_limit = 350
zoom = 1.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstDownReturn/Area2D" index="0"]

shape = SubResource( 8 )
disabled = true
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="ChallengeCamera/Area2D" to="." method="_on_ChallengeArea2D_body_entered"]

[connection signal="body_entered" from="EasyCamera/Area2D" to="." method="_on_EasyArea2D_body_entered"]

[connection signal="body_entered" from="FirstDown/Area2D" to="." method="_on_FirstDown_Area2D_body_entered"]

[connection signal="body_entered" from="FirstDownReturn/Area2D" to="." method="_on_FirstDownReturn_Area2D_body_entered"]


[editable path="ChallengeCamera"]
[editable path="EasyCamera"]
[editable path="FirstDown"]
[editable path="FirstDownReturn"]
